--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.jpa.show-sql=true
 spring.jpa.properies.hibernate.format_sql=true
+
+spring.web.error.include-stacktrace=never
+
+api.security.token.secret=${JWT_SECRET:12345678}
