--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,19 @@
 spring.application.name=AutoEscolaS042
-server.port=8080 
+server.port=8080
 
-spring.datasource.url=jdbc:mysql://localhost:3306/auto_escola_s042
+spring.datasource.url=jdbc:mysql://localhost:3306/auto_escola_s042?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=senai
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+spring.flyway.clean-disabled=true
+
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properies.hibernate.format_sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 spring.web.error.include-stacktrace=never
 
